# data-indexing-structures-and-algorithms

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md
lab-1/: CMakeLists.txt  CONTRIBUTING.md
lab-1/benchmark/: CMakeLists.txt  ExtensibleHashingBenchmark.cpp  print.cpp
lab-1/include/: Bucket.hpp  ExtensibleHashing.hpp
lab-1/include/common/: Utils.hpp
lab-1/include/ehash/: Bucket.hpp  ExtensibleHashing.hpp
lab-1/protoc/: CMakeLists.txt  TestMessage.proto
lab-1/src/: Bucket.cpp  CMakeLists.txt  ExtensibleHashing.cpp  main.cpp  proto_example.cpp
lab-1/src/common/: CMakeLists.txt  Utils.cpp
lab-1/src/lib/: Bucket.cpp  CMakeLists.txt  ExtensibleHashing.cpp
lab-1/src/lib/log/: Logger.cpp
lab-1/test/: CMakeLists.gtest.txt  CMakeLists.txt  ExtensibleHashingTest.cpp
lab-1/test/common/: CMakeLists.txt  Utils.cpp
lab-2/: CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt
lab-2/benchmark/: Benchmark.hpp  CMakeLists.benchmark.txt  CMakeLists.txt  FAISSIndicesBenchmark.cpp  FashionMNIST.hpp  KDTreeBenchmark.cpp
lab-2/data/covertype/: README.md
lab-2/include/kdtree/: BoundingBox.hpp  KDNode.hpp  KDTree.hpp  Node.hpp  Point.hpp
lab-2/include/kdtree/indexes/: FAISSIndex.hpp  Index.hpp  KDTreeIndex.hpp
lab-2/protoc/: AddressBook.proto
lab-2/src/: CMakeLists.txt  main.cpp
lab-2/src/lib/: BoundingBox.cpp  CMakeLists.txt  KDNode.cpp  KDTree.cpp  Node.cpp  Point.cpp
lab-2/src/lib/indexes/: FAISSIndex.cpp  KDTreeIndex.cpp
lab-2/test/: CMakeLists.gtest.txt  CMakeLists.txt  KDNodeTest.cpp  KDTreeTest.cpp  PointTest.cpp
lab-2/test/indexes/: FAISSIndexTest.cpp  KDTreeIndexTest.cpp
lab-4/: CMakeLists.txt  CONTRIBUTING.md
lab-4/benchmark/: CMakeLists.benchmark.txt  Dataset.hpp  InvertedIndexBenchmark.cpp
lab-4/include/inverted_index/: InvertedIndex.hpp  QueryProcessor.hpp  Skiplists.hpp  StorageManager.hpp  TextNormalizer.hpp  pForDelta.hpp
lab-4/include/log/: Logger.hpp
lab-4/src/: CMakeLists.txt  main.cpp
lab-4/src/lib/: CMakeLists.txt
lab-4/src/lib/inverted_index/: InvertedIndex.cpp  QueryProcessor.cpp  Skiplists.cpp  StorageManager.cpp  TextNormalizer.cpp  pForDelta.cpp
lab-4/test/: CMakeLists.gtest.txt  InvertedIndexIntegrationTest.cpp  InvertedIndexTest.cpp  QueryProcessorTest.cpp  SkiplistsTest.cpp  StorageManagerTest.cpp  TextNormailizerTest.cpp  pForDeltaTest.cpp
